--- a/index.html
+++ b/index.html
@@ -18,9 +18,32 @@
                 <img src="images/search.png" alt="search">
             </button>
         </div>
+
+        <div class="weather">
+            <img src="images/rain.png" class="weather-icon" alt="weatherCondition">
+            <h1 class="temp">30 °C</h1>
+            <h2 class="city">Colombo</h2>
+            <div class="details">
+                <div class="col">
+                    <img src="images/humidity.png" alt="humadity">
+                    <div>
+                        <p class="humadity">50%</p>
+                        <p>Humidity</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="images/wind.png" alt="wind">
+                    <div>
+                        <p class="wind">15km/sh</p>
+                        <p>Wind Speed</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-    ddddddddddddddddddddddddd
+
+
 </body>
 
 </html>
