--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                 <img src="images/search.png" alt="search">
             </button>
         </div>
+        <div class="error">
+            <p>Invalid city name !</p>
+        </div>
 
         <div class="weather">
             <img src="images/rain.png" class="weather-icon" alt="weatherCondition">
@@ -25,16 +28,16 @@
             <h2 class="city">Colombo</h2>
             <div class="details">
                 <div class="col">
-                    <img src="images/humidity.png" alt="humadity">
+                    <img src="images/humidity.png" alt="humidity">
                     <div>
-                        <p class="humadity">50%</p>
+                        <p class="humidity">50%</p>
                         <p>Humidity</p>
                     </div>
                 </div>
                 <div class="col">
                     <img src="images/wind.png" alt="wind">
                     <div>
-                        <p class="wind">15km/sh</p>
+                        <p class="wind">15km/h</p>
                         <p>Wind Speed</p>
                     </div>
                 </div>
@@ -42,6 +45,58 @@
         </div>
     </div>
 
+    <script>
+        const apiKey = "fb147f0232661e85f0e87c7e8fbec079";
+        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
+
+        const searchBox = document.querySelector(".search input");
+        const searchBtn = document.querySelector(".search button");
+        const weatherIcon = document.querySelector(".weather-icon")
+
+        async function checkWeather(city) {
+            const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
+
+            if (response.status == 404) {
+                document.querySelector(".error").style.display = "block";
+                document.querySelector(".weather").style.display = "none";
+            } else {
+                var data = await response.json();
+
+                console.log(data);
+
+                document.querySelector(".city").innerHTML = data.name;
+                document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°C";
+                document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
+                document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
+
+                if (data.weather[0].main == "Clouds") {
+                    weatherIcon.src = "images/clouds.png"
+                } else if (data.weather[0].main == "Clear") {
+                    weatherIcon.src = "images/clear.png"
+                } else if (data.weather[0].main == "Rain") {
+                    weatherIcon.src = "images/rain.png"
+                } else if (data.weather[0].main == "Snow") {
+                    weatherIcon.src = "images/snow.png"
+                } else if (data.weather[0].main == "Drizzle") {
+                    weatherIcon.src = "images/drizzle.png"
+                } else if (data.weather[0].main == "Mist") {
+                    weatherIcon.src = "images/mist.png"
+                }
+
+                document.querySelector(".weather").style.display = "block";
+                document.querySelector(".error").style.display = "none";
+            }
+
+
+
+        }
+
+        searchBtn.addEventListener("click", () => {
+            checkWeather(searchBox.value);
+        })
+
+
+    </script>
 
 
 </body>
